--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-img {
+/* img {
     width: 24px;
 }
 
@@ -33,6 +33,117 @@ img {
         float: right;
     }
 
+    .addTodo {
+        margin: 10px auto;
+    }
+}
+
+@media only screen and (max-width: 300px) {
+    .card-footer button {
+        width: 75px;
+    }
+} */
+
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+* {
+    font-family: 'Poppins', sans-serif;
+}
+
+textarea::-webkit-scrollbar {
+    width: 5px;
+}
+
+textarea::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+textarea::-webkit-scrollbar-thumb {
+    background-color: rgb(0, 250, 0);
+    /* outline: 1px solid slategrey; */
+}
+
+
+
+textarea:focus {
+    outline: none;
+}
+
+img {
+    width: 24px;
+}
+
+.appname {
+    padding-top: 10px;
+}
+
+.addBtn {
+    border: none;
+    padding: 5px;
+    font-size: 20px;
+    background-color: rgb(0, 250, 0);
+    font-weight: bold;
+    border-radius: 20px;
+}
+
+.saveBtn {
+    border: none;
+    padding: 5px;
+    background-color: rgb(0, 250, 0);
+    font-weight: bold;
+    border-radius: 20px;
+    margin-top: -20px;
+}
+
+.editBtn {
+    border: none;
+    padding: 2px;
+    background-color: cyan;
+    font-weight: bold;
+    border-radius: 20px;
+}
+
+.removeBtn {
+    border: none;
+    padding: 2px;
+    background-color: rgb(255, 0, 0);
+    font-weight: bold;
+    border-radius: 20px;
+}
+
+.addTodo {
+    margin: 20px auto;
+    padding: 10px;
+}
+
+.btn {
+    font-weight: bold;
+}
+
+.todoTitle {
+    font-size: 20px;
+}
+
+.todoDes {
+    width: 100%;
+    resize: none;
+    background: none;
+    color: #fff;
+    margin-bottom: -20px;
+    /* border: none; */
+}
+
+.showTodo {
+    display: flex;
+    justify-content: center;
+}
+
+.card-footer button {
+    width: 99px;
+}
+
+@media only screen and (max-width: 750px) {
     .addTodo {
         margin: 10px auto;
     }
